HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/OverrideNoConcrete/Expected.uv
//! Expected diagnostic metadata for the OverrideNoConcrete rejected-source specimen.

expectedDiagnostic("E-UNS-0105", "rule.14.Override-NoConcrete")
